# Rasberry-pi-pico-gesture-recognition

./: CMakeLists.txt  README.md  main.cpp
MPU6050_drv/: CMakeLists.txt  mpu6050.c  mpu6050.h
